2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.

2003-12-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/Makefile.am: Fix typo in rule to build from cache/%.c.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/cache/Makefile.am: Remove.
	* shared/misc/Makefile.am: Remove.
	* shared/Makefile.am: Merge-in the Makefile.ams above.
	Eliminate VPATH.
	* configure.ac: Reflect changes above.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/cache/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* m68040/fpsp/Makefile.am: Remove all-local: $(ARCH).
	* shared/cache/Makefile.am: Remove all-local: $(ARCH).
	* shared/misc/Makefile.am: Remove all-local: $(ARCH).

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* m68040/Makefile.am: Reformat.
	* m68040/fpsp/Makefile.am: Reformat.
	* shared/Makefile.am: Reformat.
	* shared/cache/Makefile.am: Reformat. Use dirstamps for preinstallation.
	* shared/misc/Makefile.am: Reformat.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* shared/cache/cache.c (m68030): fix prototype mismatch of
	_CPU_cache_flush_entire_data.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* shared/misc/m68kidle.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* m68040/Makefile.am: Reflect having moved automake/.